--- a/config/local.yaml
+++ b/config/local.yaml
@@ -5,7 +5,7 @@
   idle_timeout: "60s"
   user: "admin"
  database:
-  host: "db"
+  host: "localhost"
   port: 5432
   user: "postgres"
   name: "shop"
