fix linter. add test for linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,10 +2,11 @@ run:
   timeout: 2m # проект не большой, поэтому данного времени достаточно для проверки
 
 linters: # подключаем линтеры
+  disable-all: true # отключаем все линтеры и включаем по списку нужные
   enable:
     - errcheck # проверяет обработку ошибок
-    - govet # анализирует потенциальные ошибки
-    - staticcheck # ищет неиспользуемые переменные, функции, дублирующий код
+    # - govet # анализирует потенциальные ошибки (находит ошибки в гошке в версиях старше 1.23)
+    # - staticcheck # ищет неиспользуемые переменные, функции, дублирующий код (цепляет тайпчек от говет)
     - gosec # проверяет уязвимости
     - revive # анализирует стиль, требует комментирование
 
@@ -19,5 +20,6 @@ linters-settings: # отдельные настройки
   revive:
     severity: warning # вместо ошибки по стилю выдает предупреждение
   gosec:
-    excludes:
-      - G104  # игнорировать ошибки пустого блока if err != nil {}
+    excludes: G104  # игнорировать ошибки пустого блока if err != nil {}
+    severity: "high"  # Увеличиваем чувствительность
+    confidence: 0.8  # Доверять предупреждениям (от 0 до 1)
