--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,8 +5,8 @@ linters: # подключаем линтеры
   disable-all: true # отключаем все линтеры и включаем по списку нужные
   enable:
     - errcheck # проверяет обработку ошибок
-    # - govet # анализирует потенциальные ошибки (находит ошибки в гошке в версиях старше 1.23)
-    # - staticcheck # ищет неиспользуемые переменные, функции, дублирующий код (цепляет тайпчек от говет)
+    - govet # анализирует потенциальные ошибки (находит ошибки в гошке в версиях старше 1.23)
+    - staticcheck # ищет неиспользуемые переменные, функции, дублирующий код (цепляет тайпчек от говет)
     - gosec # проверяет уязвимости
     - revive # анализирует стиль, требует комментирование
 
