--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,11 +1,11 @@
  env: "local" #local, dev, prod
  http_server:
-  address: "localhost:8080"
+  address: "0.0.0.0:8080"
   timeout: "4s"
   idle_timeout: "60s"
   user: "admin"
  database:
-  host: "localhost"
+  host: "db"
   port: 5432
   user: "postgres"
   name: "shop"
