did some additionals

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,6 +11,8 @@ linters: # подключаем линтеры
     - revive # анализирует стиль, требует комментирование
 
 issues: # предотвращает излишний спам из ошибок
+  exclude-dirs:
+    - tests
   max-issues-per-linter: 10 # если 10 проблем, проверка останавливается
   max-same-issues: 3 # сокращает повтор однотипных ошибок до 3 первых (даже если они дальше есть по коду)
 
